fix: Remove issues with inline code and whitespace

--- a/static/global.css
+++ b/static/global.css
@@ -84,9 +84,9 @@ a {
 
 code {
 	font-family: menlo, inconsolata, monospace;
-	font-size: calc(1em - 2px);
+	font-size: .85em;
 	color: #555;
-	background-color: #f0f0f0;
+	background-color: #d0d0d0;
 	padding: 0.2em 0.4em;
 	border-radius: 2px;
 }
